--- a/.github/workflows/main-release.yaml
+++ b/.github/workflows/main-release.yaml
@@ -65,8 +65,12 @@ jobs:
         version: "latest"
     - name: Build system-charts repo Image
       run: make package-system-charts-repo
-    - name: Build Installer Image
+    - name: Build Installer Image & Upload Charts to S3
       run: make package-installer
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: 'us-east-1'
     - name: Push Latest(main) Docker Images
       run: |
         . ./scripts/version
