fix: update notebook controller

--- a/deploy/charts/llmos-crd/templates/ml.llmos.ai_notebooks.yaml
+++ b/deploy/charts/llmos-crd/templates/ml.llmos.ai_notebooks.yaml
@@ -8217,13 +8217,8 @@ spec:
                   - type
                   type: object
                 type: array
-              readyReplicas:
-                description: ReadyReplicas is the number of Pods created by the StatefulSet
-                  controller that have a Ready Condition.
-                format: int32
-                type: integer
-              state:
-                description: ContainerState is the state of underlying container.
+              containerState:
+                description: ContainerState is the mirror state of underlying container
                 properties:
                   running:
                     description: Details about a running container
@@ -8280,10 +8275,17 @@ spec:
                         type: string
                     type: object
                 type: object
+              readyReplicas:
+                description: ReadyReplicas is the number of Pods created by the StatefulSet
+                  controller that have a Ready Condition.
+                format: int32
+                type: integer
+              state:
+                description: State is the state of the notebook
+                type: string
             required:
             - conditions
             - readyReplicas
-            - state
             type: object
         type: object
     served: true
