--- a/deploy/charts/llmos-crd/templates/management.llmos.ai_roletemplatebindings.yaml
+++ b/deploy/charts/llmos-crd/templates/management.llmos.ai_roletemplatebindings.yaml
@@ -36,6 +36,10 @@ spec:
             type: string
           metadata:
             type: object
+          namespaceId:
+            description: NamespaceId is the namespace id of the namespace the role
+              template binding is applied to.
+            type: string
           roleTemplateRef:
             description: |-
               RoleTemplateRef can reference a RoleTemplate in the current namespace or a GlobalRole in the global namespace.
