test: add upgrade controller testings

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -46,3 +46,5 @@ jobs:
       run: make build-installer
       env:
         UPLOAD_CHARTS: "false"
+    - name: Run build node-upgrade image
+      run: make build-upgrade
