--- a/.github/workflows/main-release.yaml
+++ b/.github/workflows/main-release.yaml
@@ -72,6 +72,8 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: 'us-east-1'
+    - name: package node-upgrade Image
+      run: make package-upgrade
     - name: Push Latest(main) Docker Images
       run: |
         . ./scripts/version
