--- a/deploy/charts/llmos-operator/templates/system-charts-repo.yaml
+++ b/deploy/charts/llmos-operator/templates/system-charts-repo.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.suc.enabled -}}
+{{- if .Values.systemChartsRepo.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -30,7 +30,7 @@ spec:
               protocol: TCP
           resources:
             {{- toYaml .Values.systemChartsRepo.resources | nindent 12 }}
-      {{- with .Values.operator.apiserver.tolerations }}
+      {{- with .Values.systemChartsRepo.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
@@ -42,12 +42,12 @@ metadata:
   labels:
     {{- include "llmos-operator.systemChartsLabels" . | nindent 4 }}
 spec:
-  type: {{ .Values.operator.webhook.service.type }}
+  type: {{ .Values.systemChartsRepo.service.type }}
   ports:
-    - port: 80
+    - port: {{ .Values.systemChartsRepo.service.httpPort }}
       targetPort: http
       protocol: TCP
       name: http
   selector:
-    {{- include "llmos-operator.systemChartsLabels" . | nindent 4 }}
-{{- end }}
+    {{- include "llmos-operator.systemChartsSelectorLabels" . | nindent 4 }}
+{{- end -}}
